[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/Enemy.gd" type="Script" id=1]
[ext_resource path="res://audio/ShootEnemy.wav" type="AudioStream" id=2]
[ext_resource path="res://audio/Explosion.wav" type="AudioStream" id=3]
[ext_resource path="res://scenes/EnemyProjectile.tscn" type="PackedScene" id=4]
[ext_resource path="res://sprites/enemyRed5.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 40, 40 )

[node name="Enemy" type="Area2D" groups=[
"Enemies",
]]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
shoot_audio = ExtResource( 2 )
explosion_audio = ExtResource( 3 )
speed = 50
health = 30
projectile = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 1 )

[node name="ShootTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="CannonPosition" type="Position2D" parent="." index="3"]

position = Vector2( 0, 30 )

[node name="Audio" type="AudioStreamPlayer2D" parent="." index="4"]

stream = null
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1
_sections_unfolded = [ "Material", "Visibility" ]

[connection signal="timeout" from="ShootTimer" to="." method="_on_Timer_timeout"]


